src/app/pages/home/home.scss
@import 'variables';
@import 'mixins';

.home-page {
    flex: 1 0 auto;

    .us-history {
        background-image: url('/images/home/subjects/us-history/background.jpg');
        background-position: center top;
        background-repeat: no-repeat;
        background-size: 100vw 55.695vw;
        height: 55.695vw;
        margin-top: -8rem;
        overflow: hidden;
        padding-top: 8rem;
        position: relative;
    }

    .square-1,
    .square-2,
    .square-3,
    .square-4 {
        background-color: rgba(color(blue), 0.1);
        position: absolute;
        z-index: 0;
    }

    .square-1,
    .square-4 {
        height: 1.77vw;
        width: 1.77vw;
    }

    .square-1 {
        left: 4.56vw;
        top: 29.43vw;
    }

    .square-2 {
        height: 37.9vw;
        left: 9.2vw;
        top: 9.5vw;
        width: 37.9vw;
    }

    .square-3 {
        height: 26.27vw;
        left: 62.9vw;
        top: 21.49vw;
        width: 26.27vw;
    }

    .square-4 {
        left: 74.17vw;
        top: 11.48vw;
    }

    .sacajawea,
    .john-adams,
    .clermont,
    .book,
    .video-banner {
        background-position: center center;
        background-repeat: no-repeat;
        background-size: cover;
        z-index: 1;
    }

    .sacajawea,
    .john-adams,
    .clermont {
        opacity: 0.7;
    }

    .sacajawea {
        background-image: url('/images/home/subjects/us-history/sacajawea.png');
        height: 7.1376vw;
        left: 26.637vw;
        position: absolute;
        top: 23.7vw;
        width: 8.83vw;
    }

    .john-adams {
        background-image: url('/images/home/subjects/us-history/john-adams.png');
        height: 5.94vw;
        left: 78.44vw;
        position: absolute;
        top: 16.85vw;
        width: 5.07vw;
    }

    .clermont {
        background-image: url('/images/home/subjects/us-history/clermont.png');
        height: 17.4vw;
        left: 70.37vw;
        position: absolute;
        top: 28.4vw;
        width: 26.39vw;
    }

    .book {
        background-image: url('/images/subjects/us-history.svg');
        background-size: 57.4vw; // HACK: need properly trimmed SVG
        height: 25.607vw;
        left: 38.12vw;
        position: absolute;
        top: 7.726vw;
        width: 25.607vw;
    }

    .video-banner {
        background-image: url('/images/home/subjects/us-history/student.png');
        height: 41.7vw;
        left: 46.2vw;
        position: absolute;
        top: 14vw;
        width: 39.85vw;
        z-index: 2;
    }

    .now-i-can {
        background-color: rgba(color(turqoise), 0.85);
        color: color(neutral-lightest);
        font-size: 2.4vw;
        font-weight: 600;
        height: 7.064vw;
        left: 12.8vw;
        line-height: 7.064vw;
        padding: 0;
        position: absolute;
        text-transform: none;
        top: 33.8484vw;
        width: 42.09vw;
        z-index: 3;

        .quote {
            display: inline-block;
            font-family: 'Permanent Marker', cursive;
            transform: rotate(-1.2deg) translate(0.75vw, -0.45vw);
        }

        &::after {
            border-bottom: 0.18vw solid color(neutral-lightest);
            content: '';
            left: 15.4vw;
            position: absolute;
            top: 5vw;
            width: 24.6vw;
        }
    }

    .subject-links {
        left: 18.3vw;
        letter-spacing: 0.078vw;
        position: absolute;
        top: 41.5vw;
        z-index: 3;

        ul {
            list-style-type: none;
            margin: 0;
            padding: 0;

            li {
                display: inline-block;
            }
        }

        .btn {
            font-size: 1.1vw;
            height: 4.5vw;
            line-height: 4.5vw;
            padding: 0;
            text-align: center;
        }

        .explore-subject {
            margin-right: 0.2vw;
            width: 17.5vw;
        }

        .explore-all {
            width: 18.55vw;
        }
    }
}

//Buckets

.buckets-wrap {
	position: relative;
	background: #f0f0f0;
	display: flex;
	padding: 1rem 0;

	@include large-up {
		padding: 8rem 0;
    }

	.container {
		display: inherit;
		margin: 0 auto;
		padding: 0 1.5rem;
		max-width: $boxed-width;
		flex-flow: column nowrap;
		justify-content: space-between;
		@include large-up {
	        flex-flow: row wrap
	    }

		.col {
			flex-basis: 100%;
			background: color(neutral-lighter);
			display: flex;
			flex-flow: row nowrap;
			margin: .75rem 0;

			&:not(:last-child) {
				@include large-up {
					flex-basis: 49%
			    }
				@include large {
					flex-basis: 32.33%
			    }
			}

			&:last-child {
				@include large-up {
					flex-basis: 100%
			    }
				@include large {
					flex-basis: 32.33%
			    }
			}

			> div  {
				width: 50%;
			}

			.b-img {
				position: relative;
				min-height: 240px;
				background-color: color(green);
				background-repeat: no-repeat;
				background-position: center top;
				background-size: cover;

			}

			&:first-child  {
				.b-img {
					background-image: url('/images/home/bucket-juan.jpg');

					&:after {	// Parent should have position: relative
					    @include triangle(
					      $direction: right,
					      $position: top 50% right 0,
					      $color: white,
					      $size: 2.4rem
					    );
					}
				}
			}

			&:nth-child(2)  {
				.b-img {
					background-color: color(cyan);
					background-image: url('/images/home/bucket-school.jpg');

					&:after {
					    @include triangle(
					      $direction : left,
					      $position: top 50% left -1px,
					      $color: white,
					      $size: 2.4rem
					    );
					}
				}
			}

			&:last-child {
				flex-direction: column;
				align-items: flex-start;
				padding: 3rem 4rem;
				color: white;
				background-color: color(secondary);
				@include large-up {
					padding: 1.5rem 4rem;
			    }

				p {
					font-size: 2.4rem;
				}

				.btn {
					color: color(orange);
					background-color: white;
				}
			}

			.b-text {
				padding: 3rem 1.5rem;
				background: white;
				position: relative;

				blockquote {
					margin: 1rem 0 0;
				}
			}
		}

	}
}

// Banner Education

.br-education--wrap {
	position: relative;
	display: flex;
	flex-flow: column nowrap;
	width: 100vw;
	min-height: 75vh;
	background-color: color(blue);
	background-image:  url('/images/home/br-education-bg-sm.jpg');
	background-repeat: no-repeat;
	background-size: cover;

	@include medium-up {
		padding: 9rem 0;
		background-image:  url('/images/home/br-education-bg-md.jpg');
	}

	@include large-up {
		background-image:  url('/images/home/br-education-bg-lg.jpg');
	}

	.br-overlay {
		position: absolute;
		width: 100%;
		min-height: 100%;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
		background-color: rgba(color(cyan), .8)
	}

    .square-1,
    .square-2{
        position: absolute;
    }

    .square-1,
    .square-2 {
	    background-color: rgba(color(blue), 0.1);
    }

    .square-1 {
	    width: 40vw;
	    height: 8.751vw;
	    bottom: 3.571vw;
	    left: 14.571vw;
    }

    .square-2 {
	    width: 45.714vw;
	    height: 37.142vw;
	    top: 2.857vw;
	    right: 3.571vw;
    }

    .br-text--wrap {
	    position: relative;
	    max-width: $boxed-width;
	    margin: 0 auto;
	    padding: 0 1.5rem;

	    .br-text {
		    padding: 4rem 4rem 0 4rem;
		    left: 0;

		    @include medium-up {
			    max-width: 60%;
			    padding: 4rem;
				background-color: rgba(color(cyan), 0.6);
		    }

		    @include large {
			    padding-right: 18rem;
		    }
	    }

	    * {
		    position: relative;
	    }

	    p {
		    margin-bottom: 0;
		    color: white
	    }

	    h1 {
		    font-size: 6.9rem;
		    font-weight: 700;
		    line-height: .8;
		    letter-spacing: -.3rem;
		    color: color(yellow);

		    @include medium-up {
				font-size: 9vmin;
				letter-spacing: -.6rem;
		    }
	    }

	    p:not(.larger) {
		    font-size: 1.8rem
	    }
    }

    .square-4 {
	    position: relative;
	    width: 100vw;
	    height: 80vw;
	    bottom: 0;
        right: 3rem;
	    background-image: url('/images/home/br-student-bg.png');
	    background-repeat: no-repeat;
	    background-position: right bottom;
	    background-size: contain;

	    @include medium-up {
			position: absolute;
			right: 0;
			background-position: left bottom;
			width: 60vw;
			height: 100%;

	    }
    }

	.br-ctas {
		position: relative;
		display: flex;
		flex-flow: column nowrap;
		max-width: 77rem;
		margin: 0 auto;
		justify-content: space-between;

		@include medium-up {
			flex-flow: row nowrap;
			padding: 2rem 1.5rem;
		}

		.col {
			position: relative;
			width: 100%;
			color: white;
			box-shadow: 0 0 3px rgba(neutral-color(dark), .5);
			transition: all 200ms ease-in-out;

			@include medium-up {
				width: 48%;
			}

			&:hover {
				transform: scale(1.05);
			}

			a {
				width: 100%;
				display: block;
				padding: 2rem;
			}

			&:first-child {
				background-color: color(cyan);

				.larger {
					color: color(yellow)
				}
			}

			&:last-child {
				background-color: color(gold);

				.larger {
					color: color(orange)
				}
			}

			.larger {
				margin-bottom: 0;
				font-weight: 700;
			}

			p {
				margin-top: .5rem;
				color: white;
			}
		}
	}

}

